--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+:root {
+    --main-color: azure;
+    --main-font: #05668D;
+    --main-green: #02c39a;
+    --main-light: #f0f3bd;
+}
+
+/*
+font family from googl fonts!
+*/
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,3 +17,159 @@
 html{
     font-size: 62.5%;
 }
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+}
+.nav {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: var(--main-font);
+}
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+.nav-list li a {
+    margin-right: 20px;
+    /*Change font family*/
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.2rem;
+    font-weight: lighter;
+    color: azure;
+    padding: 5px;
+    border-radius: 5px;
+}
+.nav-list li a:hover {
+    border-bottom: 1px solid azure;
+}
+.welcome-section {
+    width: 100%;
+    height: 100vh;
+    margin-top: 50px;
+    background-color: azure;
+    opacity: 0.85;
+    display: grid;
+    text-align: center;
+    align-content: center;
+}
+.welcome-section h1 {
+    font-size: 5rem;
+    /*Change family font*/
+    font-family: Verdana, Geneva, Tahoma, sans-serif;;
+    color: var(--main-font);
+}
+.welcome-section p {
+    font-size: 2.5rem;
+    /*Change family font*/
+    font-family: erdana, Geneva, Tahoma, sans-serif;;
+    font-style: italic;
+    font-weight: bold;
+    margin-top: 20px;
+    color: black;
+}
+.projects-section {
+    margin-top: 20px;
+    text-align: center;    
+    padding: 20px;
+}
+.projects-section-header {
+    font-size: 3.4rem;
+    color: black;
+    padding: 20px 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.projects-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    padding: 50px;
+}
+.projects-grid a {
+    width: 100%;
+    height: 300px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 1px 1px var(--main-font);
+
+}
+.btn-projects {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    color: white;
+    font-weight: lighter;
+    height: 30px;
+    box-shadow: 0 1px 1px #000001;
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--main-font);
+}
+.btn-projects .right-arrow {
+    margin-left: 5px;
+}
+.contact-section {
+    width: 100%;
+    height: 60vh;
+    background-color: var(--main-green);
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.contact-section-header h2 {
+    font-size: 5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
+.contact-section-header p {
+    margin-top: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    font-size: 2rem;
+    font-style: italic;
+}
+.contact-links {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 840px;
+}
+.contact-details {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.4rem;
+    color: white;
+    text-shadow: 2px 2px 1px var(--main-font);
+    transition: transform 0.3s ease-out;
+    margin-top: 50px;
+  }
+  .contact-details:hover {
+    transform: translateY(8px);
+}
+.icons-thanks div {
+    
+    align-items: center;
+    padding: 10px;
+}
+
+footer {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    background-color: var(--main-font);
+    padding: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+  }
