--- a/styles.css
+++ b/styles.css
@@ -231,3 +231,28 @@ footer a {
     font-family: 'Shadows Into Light', cursive;
 }
 /*Add @media query here*/
+
+@media (max-width: 600px) {
+    .welcome-section h1 {
+        font-size: 5rem;
+    }
+    .welcome-section p {
+        font-size: 2.5rem;
+        margin-top: 50px;
+        padding: 0 20px;
+    }
+    .projects-section-header h2 {
+        font-size: 2.5rem;
+    }
+    .contact-section-header h2 {
+        font-size: 2.5rem;
+    }
+    .contact-section-header p {
+        font-size: 1.5rem;
+    }
+    .projects-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 10px;
+    }
+}
