--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,7 @@
 @media (max-width: 600px) {
     .welcome-section h1 {
-        font-size: 5rem;
+        font-size: 4rem;
+        padding: 30px;
     }
     .welcome-section p {
         font-size: 2.5rem;
@@ -16,6 +17,9 @@
     .contact-section-header p {
         font-size: 1.5rem;
     }
+    .projects-section-header {
+        font-size: 3rem;
+    }
     .projects-grid {
         display: grid;
         grid-template-columns: 1fr;
@@ -30,6 +34,9 @@
      font-size: 1.5rem;
      margin: 10px auto;   
     }
+.contact-section {
+    padding-top: 120px;
+}
     .contact-links {
         justify-content: center;
         max-width: 95%;
