--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ a {
     font-size: 10rem;
     font-family: 'Shadows Into Light', cursive;
     color: var(--main-font);
+    padding: 0 20px;
 }
 .welcome-section p {
     font-size: 3rem;
@@ -70,14 +71,15 @@ a {
     color: black;
 }
 .projects-section {
-    margin-top: 20px;
     text-align: center;    
-    padding: 20px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .projects-section-header {
     font-size: 3.4rem;
     color: black;
-    padding: 20px 0;
+    padding: 30px 0;
     font-family: 'Kalam', cursive;
 }
 .projects-grid {
@@ -156,11 +158,12 @@ a {
 }
 .contact-section {
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     background-color: var(--main-green);
-    margin-top: 20px;
+    padding: 20px;
+    padding-top: 60px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -169,15 +172,15 @@ a {
     font-size: 6rem;
     font-family: 'Kalam', cursive;
     color: white;
+    padding-top: 60px;
 }
 .contact-section-header p {
-    margin-top: 5px;
+    padding-top: 60px;
     font-family: 'Kalam', cursive;
     color: white;
     font-size: 3rem;
 }
 .contact-links {
-    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
