--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ a {
     margin-left: 5px;
 }
 .contact-section {
+    margin-top: 50px;
     width: 100%;
     height: 80vh;
     background-color: var(--main-green);
